Add PlatForm Android

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,8 @@
 {
   "name": "StudentApp",
-  "integrations": {},
+  "integrations": {
+    "cordova": {}
+  },
   "type": "ionic-angular",
   "id": "066866a2"
 }
