--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/splash-screen": "~4.18.0",
+    "@ionic-native/sqlite": "^4.20.0",
     "@ionic-native/status-bar": "~4.18.0",
+    "@ionic-native/toast": "^4.20.0",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "2.2.0",
     "cordova-android": "8.0.0",
+    "cordova-plugin-x-toast": "2.7.2",
+    "cordova-sqlite-storage": "3.2.0",
     "ionic-angular": "3.9.3",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -52,7 +56,9 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-x-toast": {}
     },
     "platforms": [
       "android"
