--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^4.20.0",
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/sqlite": "^4.20.0",
@@ -28,6 +29,8 @@
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "2.2.0",
     "cordova-android": "8.0.0",
+    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-ionic": "^5.0.0",
     "cordova-plugin-x-toast": "2.7.2",
     "cordova-sqlite-storage": "3.2.0",
     "ionic-angular": "3.9.3",
@@ -59,7 +62,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-x-toast": {}
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
